--- a/.github/workflows/pipeline.dev.yaml
+++ b/.github/workflows/pipeline.dev.yaml
@@ -1,15 +1,21 @@
-steps:
-  - name: 'docker'
-      args: [ 'docker', 'build', '-t', 'paulosantama/mfc4-d5-ci-cd-nestjs:latest', '-t', 'paulosantama/mfc4-d5-ci-cd-nestjs:$SHORT_SHA', '.' ]
+on: [ push, pull_request ]
 
-  - name: 'docker'
-      args: [ 'run', '-d', '--name', 'desafio-05', 'paulosantama/mfc4-d5-ci-cd-nestjs:latest' ]
+jobs:
+  tests:
+    name: run tests
+    runs-on: ubuntu-latest
 
-  - name: 'npm'
-      args: [ 'run', 'test' ]
+    strategy:
+      matrix:
+        node-version: [12.x, 14.x]
 
-  - name: 'npm'
-      args: [ 'run', 'test:e2e' ]
-
-  - name: 'npm'
-      args: [ 'run', 'test:cov' ]
+    steps:
+      - uses: actions/checkout@v2
+      - name: testes
+        uses: actions/setup-node@v1
+        with:
+          - node-versions: ${{ matrix.node-version }}
+      - run: npm install
+      - run: npm test
+      - run: npm test:e2e
+      - run: npm test:cov
