--- a/.github/workflows/pipeline.dev.yaml
+++ b/.github/workflows/pipeline.dev.yaml
@@ -11,10 +11,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - name: testes
+      - name: Use Node.js ${{ matrix.noed-version }}
         uses: actions/setup-node@v1
         with:
-          - node-versions: ${{ matrix.node-version }}
+          node-versions: ${{ matrix.node-version }}
       - run: npm install
       - run: npm test
       - run: npm test:e2e
