--- a/.github/workflows/pipeline.dev.yaml
+++ b/.github/workflows/pipeline.dev.yaml
@@ -7,13 +7,13 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [12.x, 14.x]
+        node-version: 12.18.3
 
     steps:
       - uses: actions/checkout@v2
-      - name: Use Node.js ${{ matrix.noed-version }}
+      - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
         with:
-          node-versions: ${{ matrix.node-version }}
+          node-version: ${{ matrix.node-version }}
       - run: npm install
       - run: npm test
